tests/snapshots/cli_help__cli_help_tasks_open.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Open a task's link in the browser or mail app (http, https and mailto only). With several, --index picks one; without it they're listed and it exits 2

Usage: ms-todo tasks open [OPTIONS] <TASK>

Arguments:
  <TASK>  The task's ID from `tasks list`, or its exact title when --list is given

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --list <NAME|ID>       Look for the task in this list (exact name or ID), which also lets TASK be an exact title
      --index <N>            Which link, from 1, as `tasks links` numbers them
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
