tests/snapshots/cli_help__cli_help_tui.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Browse and change your tasks in a full-screen, keyboard-driven view (press ? inside for the keys)

Usage: ms-todo tui [OPTIONS]

Options:
      --ascii                Draw with plain ASCII instead of Unicode symbols
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --theme <NAME>         Draw with this theme instead of `[tui] theme` in config.toml (see --list-themes)
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --list-themes          Print the built-in themes' names, one per line, and quit
      --bench-startup        Measure the start and a scripted run of keys against your cache, print the timings and quit
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
